<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>si.vsrs.cif.pametne-kartice</groupId>
    <artifactId>pametne-kartice-cucumber</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>pametne-kartice - cucumber</name>
    <url>http://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
  
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.16</version>
                    <configuration>
                        <!--argLine>-Xms512m -Xmx512m</argLine
                        <argLine>-Xms1224m -Xmx1224m -XX:PermSize=150m -XX:MaxPermSize=150m</argLine>
                                     <argLine>-Xms1224m -Xmx1224m -XX:PermSize=150m -XX:MaxPermSize=150m</argLine>
                         <argLine>-Xms512m -Xmx512m -XX:PermSize=150m -XX:MaxPermSize=150m</argLine>
                        -->
                        <argLine>-Xms512m -Xmx512m -XX:PermSize=150m -XX:MaxPermSize=150m</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
    <dependencies>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>1.1.4</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.1.4</version>            
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>            
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <!--version>2.40.0</version-->
              <version>2.53.0</version>
            <!--2.34.0 -->
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>2.53.0</version>
            <!--version>2.40.0</version-->
            <!--2.34.0 -->
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>1.1.4</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency> 
               
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId> 
            <version>10.10.1.1</version>                                
        </dependency>
       
        
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derbyclient</artifactId>
            <version>10.10.1.1</version>
            <type>jar</type>            
        </dependency>
        
        
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>4.0.2.RELEASE</version>
        </dependency> 
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>4.0.2.RELEASE</version>
            <type>jar</type>
        </dependency>
        
      
  <!--dependency>
            <groupId>si.vsrs.cif.skupni</groupId>
            <artifactId>skupni-wsdl</artifactId>
            <version>1.2</version>
        </dependency-->
       
            
    </dependencies>
</project>
